web site update

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -71,7 +71,7 @@
 
             <header>
               <div class="wrapper-full">
-                <a class="logo" href="/">DigitalOcean</a>
+                <a class="logo" href="/"><img src="/images/devops.png"></a>
                 <a id="hiring" href="/company/careers/">We're Hiring!</a>
                 <a class="m-pikabu-nav-toggle icon-navicon" data-role="left">
                   <span></span>
