update docs link

--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -63,7 +63,7 @@
                   <li><a class="" href="http://ci.idevops.net:33080/">CI</a></li>
                   <li><a class="" href="/community/">Community</a></li>
                   <li><a class="" href="/download/">Download</a></li>
-                  <li><a class="" href="/ds/">Deployment Service</a></li>
+                  <li><a class="" href="/ds/">Documents</a></li>
                 </ul>
               </nav>
             </div>
@@ -90,7 +90,7 @@
                     <li><a class="" href="http://ci.idevops.net:33080/">CI</a></li>
                     <li><a class="" href="/community/">Community</a></li>
                     <li><a class="" href="/download/">Download</a></li>
-                    <li><a class="" href="/ds/">Deployment Service</a></li>
+                    <li><a class="" href="/ds/">Documents</a></li>
                   </ul>
                 </nav>
               </div>
