--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -154,9 +154,9 @@
                           <span class="flameC"></span>
                         </div>
                       </div>
-                      <h3>SSD-Only Cloud</h3>
-                      <p>Deploy and speed up your projects <br>on our SSD-based cloud.</p>
-                      <a href="/pricing/">View Pricing Plans</a>
+                      <h3>Speed Up your Delivery</h3>
+                      <p>Deploy and speed up your projects <br>with DevOps solution.</p>
+                      <a href="/pricing/">View Details</a>
                     </div>
 
                     <div class="pure-u-1-3 callout" id="callout-three">
@@ -172,9 +172,9 @@
                           </div>
                         </div>
                       </div>
-                      <h3>Simple API</h3>
-                      <p>Scale your infrastructure with <br>our simple and intuitive API.</p>
-                      <a href="https://developers.digitalocean.com/documentation/v2/">View API Docs</a>
+                      <h3>Auto-Scaling</h3>
+                      <p>Scale your infrastructure automatically <br>our simple and intuitive API.</p>
+                      <a href="/ds/">View DS Docs</a>
                     </div>
                   </div>
                 </div>
