--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -10,9 +10,9 @@
 
         <title>Automate Everything | idevops.net</title>
 
-        <meta name="keywords" content="DevOps, IaaS, PaaS, XaaS, Cloud, Automation, Development, Testing, Operation, Agile">
+        <meta name="keywords" content="Analytics, Big Data, Data, Platform, Automation, Operation, DevOps, Agile">
         <meta name="description" content="">
-        <meta name="twitter:card" content="Automate everything @idevops.net">
+        <meta name="twitter:card" content="Harness the Power of Data @esse.io">
         <meta name="twitter:site" content="iDevOps">
         <meta name="twitter:title" content="DevOps">
         <meta name="twitter:description" content="">
@@ -179,7 +179,7 @@
                   </div>
                 </div>
               </section>
-
+<!--
               <section id="homepage-features" class="homepage-section">
                 <div class="wrapper-full">
                   <h2>A control panel experience made simple.</h2>
@@ -397,3 +397,4 @@
 
             </body>
             </html>
+--!>
