--- a/var/www/html/index.html
+++ b/var/www/html/index.html
@@ -8,7 +8,7 @@
 
 
 
-        <title>Automate Everything | idevops.net</title>
+        <title>Harness the Power of Data | esse.io</title>
 
         <meta name="keywords" content="Analytics, Big Data, Data, Platform, Automation, Operation, DevOps, Agile">
         <meta name="description" content="">
@@ -19,7 +19,7 @@
 
         <meta name="og:title" content="An Analytics Community">
         <meta name="og:description" content="">
-        <meta name="og:site_name" content="iDevOps">
+        <meta name="og:site_name" content="esse.io">
 
         <meta property="og:image" content='/images/devops.png'>
 
@@ -60,7 +60,7 @@
               <nav id="mobile">
                 <ul>
                   <li><a class="" href="/services/">Services</a></li>
-                  <li><a class="" href="http://ci.idevops.net:33080/">CI</a></li>
+                  <li><a class="" href="https://github.com/esse-io">Git</a></li>
                   <li><a class="" href="/community/">Community</a></li>
                   <li><a class="" href="/download/">Download</a></li>
                   <li><a class="" href="http://ds.idevops.net:8090/docs">Documents</a></li>
@@ -68,26 +68,33 @@
               </nav>
             </div>
           </div>
+
+<a href="https://github.com/esse-io"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
+
+
           <div class="m-pikabu-container">
 
             <header>
               <div class="wrapper-full">
+<!--
                 <a class="logo" href="/"><img src="/images/devops.png" width="195px" height="31px"></a>
                 <a id="hiring" href="/company/careers/">We're Hiring!</a>
                 <a class="m-pikabu-nav-toggle icon-navicon" data-role="left">
-                  <span></span>
-                </a>
+--!>
                 <nav id="button-nav">
                   <ul>
+<!--
                     <li><a href="https://cloud.idevops.net/login">Log In</a></li>
                     <li class="button-outline"><a href="https://cloud.idevops.net/registrations/new">Sign Up</a></li>
+--!>
                   </ul>
                 </nav>
 
                 <nav>
                   <ul>
                     <li><a class="" href="/services/">Services</a></li>
-                    <li><a class="" href="http://ci.idevops.net:33080/">CI</a></li>
+                    <li><a class="" href="https://github.com/esse-io">Git</a></li>
                     <li><a class="" href="/community/">Community</a></li>
                     <li><a class="" href="/download/">Download</a></li>
                     <li><a class="" href="http://ds.idevops.net:8090/docs">Documents</a></li>
@@ -125,7 +132,12 @@
               <section id="homepage-callouts" class="homepage-section">
                 <div class="wrapper-full">
 
-                  <h2><span> Improve Customer Insight | Innovate Business Models | Manage Risk and Finance</span></h2>
+<!--
+                  <h2><span> Improve Customer Insight * Innovate Business Models * Manage Risk and Finance</span></h2>
+--!>
+                  <h2><li>* Improve Customer Insight</li>
+		      <li>* Innovate Business Models</li>
+		      <li>* Manage Risk and Finance</li></h2>
 
 
                   <div class="pure-g">
